wdl-analysis/tests/validation/scoped-exprs/source.errors
error: `hints` literals can only be used within a hints section
   ┌─ tests/validation/scoped-exprs/source.wdl:72:13
   │
72 │     Int d = hints {
   │             ^^^^^

error: `input` literals can only be used within a hints section
   ┌─ tests/validation/scoped-exprs/source.wdl:76:13
   │
76 │     Int e = input {
   │             ^^^^^

error: `output` literals can only be used within a hints section
   ┌─ tests/validation/scoped-exprs/source.wdl:80:13
   │
80 │     Int f = output {
   │             ^^^^^^

error: `hints` literals cannot be nested within `hints` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:86:18
   │
85 │         ok: hints {
   │             ----- the outer `hints` literal is here
86 │             bad: hints {
   │                  ^^^^^ this `hints` literal cannot be nested

error: `input` literals cannot be nested within `hints` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:87:22
   │
86 │             bad: hints {
   │                  ----- the outer `hints` literal is here
87 │                 bad: input {
   │                      ^^^^^ this `input` literal cannot be nested

error: `output` literals cannot be nested within `input` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:88:26
   │
87 │                 bad: input {
   │                      ----- the outer `input` literal is here
88 │                     bad: output {
   │                          ^^^^^^ this `output` literal cannot be nested

error: type mismatch: expected type `hints`, but found type `output`
   ┌─ tests/validation/scoped-exprs/source.wdl:88:26
   │  
88 │                       bad: output {
   │                       --- this expects type `hints`
   │ ╭──────────────────────────^
89 │ │ 
90 │ │                     }
   │ ╰─────────────────────^ this is type `output`

error: `hints` literals cannot be nested within `hints` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:96:22
   │
95 │             ok: hints {
   │                 ----- the outer `hints` literal is here
96 │                 bad: hints {
   │                      ^^^^^ this `hints` literal cannot be nested

error: `input` literals cannot be nested within `input` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:100:21
    │
 94 │         inputs: input {
    │                 ----- the outer `input` literal is here
    ·
100 │             inputs: input {
    │                     ^^^^^ this `input` literal cannot be nested

error: type mismatch: expected type `hints`, but found type `input`
    ┌─ tests/validation/scoped-exprs/source.wdl:100:21
    │  
100 │               inputs: input {
    │               ------ this expects type `hints`
    │ ╭─────────────────────^
101 │ │                 a: input {
102 │ │ 
103 │ │                 },
    · │
117 │ │                 },
118 │ │             }
    │ ╰─────────────^ this is type `input`

error: `input` literals cannot be nested within `input` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:101:20
    │
100 │             inputs: input {
    │                     ----- the outer `input` literal is here
101 │                 a: input {
    │                    ^^^^^ this `input` literal cannot be nested

error: type mismatch: expected type `hints`, but found type `input`
    ┌─ tests/validation/scoped-exprs/source.wdl:101:20
    │  
101 │                   a: input {
    │                   - this expects type `hints`
    │ ╭────────────────────^
102 │ │ 
103 │ │                 },
    │ ╰─────────────────^ this is type `input`

error: `hints` literals cannot be nested within `input` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:104:20
    │
100 │             inputs: input {
    │                     ----- the outer `input` literal is here
    ·
104 │                 b: hints {
    │                    ^^^^^ this `hints` literal cannot be nested

error: `input` literals cannot be nested within `hints` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:105:24
    │
104 │                 b: hints {
    │                    ----- the outer `hints` literal is here
105 │                     a: input {
    │                        ^^^^^ this `input` literal cannot be nested

error: `output` literals cannot be nested within `hints` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:108:24
    │
104 │                 b: hints {
    │                    ----- the outer `hints` literal is here
    ·
108 │                     b: output {
    │                        ^^^^^^ this `output` literal cannot be nested

error: `hints` literals cannot be nested within `hints` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:111:24
    │
104 │                 b: hints {
    │                    ----- the outer `hints` literal is here
    ·
111 │                     c: hints {
    │                        ^^^^^ this `hints` literal cannot be nested

error: `output` literals cannot be nested within `input` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:115:20
    │
100 │             inputs: input {
    │                     ----- the outer `input` literal is here
    ·
115 │                 c: output {
    │                    ^^^^^^ this `output` literal cannot be nested

error: type mismatch: expected type `hints`, but found type `output`
    ┌─ tests/validation/scoped-exprs/source.wdl:115:20
    │  
115 │                   c: output {
    │                   - this expects type `hints`
    │ ╭────────────────────^
116 │ │ 
117 │ │                 },
    │ ╰─────────────────^ this is type `output`

error: `input` literals cannot be nested within `output` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:121:16
    │
120 │         outputs: output {
    │                  ------ the outer `output` literal is here
121 │             g: input {
    │                ^^^^^ this `input` literal cannot be nested

error: type mismatch: expected type `hints`, but found type `input`
    ┌─ tests/validation/scoped-exprs/source.wdl:121:16
    │  
121 │               g: input {
    │               - this expects type `hints`
    │ ╭────────────────^
122 │ │ 
123 │ │             },
    │ ╰─────────────^ this is type `input`

error: `input` literals cannot be nested within `hints` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:125:20
    │
124 │             h: hints {
    │                ----- the outer `hints` literal is here
125 │                 a: input {
    │                    ^^^^^ this `input` literal cannot be nested

error: `output` literals cannot be nested within `hints` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:128:20
    │
124 │             h: hints {
    │                ----- the outer `hints` literal is here
    ·
128 │                 b: output {
    │                    ^^^^^^ this `output` literal cannot be nested

error: `hints` literals cannot be nested within `hints` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:131:20
    │
124 │             h: hints {
    │                ----- the outer `hints` literal is here
    ·
131 │                 c: hints {
    │                    ^^^^^ this `hints` literal cannot be nested

error: task `bad` does not have an output named `c`
    ┌─ tests/validation/scoped-exprs/source.wdl:135:13
    │
135 │             c: output {
    │             ^

error: `output` literals cannot be nested within `output` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:135:16
    │
120 │         outputs: output {
    │                  ------ the outer `output` literal is here
    ·
135 │             c: output {
    │                ^^^^^^ this `output` literal cannot be nested

error: type mismatch: expected type `hints`, but found type `output`
    ┌─ tests/validation/scoped-exprs/source.wdl:135:16
    │  
135 │               c: output {
    │               - this expects type `hints`
    │ ╭────────────────^
136 │ │ 
137 │ │             }
    │ ╰─────────────^ this is type `output`

